Added Spels Known and Exhaustion changes to OneDnD

--- a/src/_scss/dark/tidy5e-dark.scss
+++ b/src/_scss/dark/tidy5e-dark.scss
@@ -27,6 +27,7 @@
 	--t5e-atwill: rgba(226, 246, 4, 0.3);
 	--t5e-innate: rgba(255, 0, 0, 0.3);
 	--t5e-alwaysprepared: rgba(0, 100, 255, 0.3);
+	--t5e-spellknown: rgba(162, 100, 255, 0.3);
 
 	//portrait icons
 	--t5e-icon-background: rgba(30, 30, 30, 1);
