--- a/src/_scss/partials/_portrait.scss
+++ b/src/_scss/partials/_portrait.scss
@@ -470,7 +470,7 @@
 }
 
 .exhaustion-container:hover .exhaustion-wrap {
-	width: 174px;
+	width: 254px;
 }
 
 .exhaustion-wrap .exhaustion-icon {
@@ -534,7 +534,11 @@
 	&.level-3 .note p:not(.lvl-3),
 	&.level-4 .note p:not(.lvl-4),
 	&.level-5 .note p:not(.lvl-5),
-	&.level-6 .note p:not(.lvl-6) {
+	&.level-6 .note p:not(.lvl-6),
+	&.level-7 .note p:not(.lvl-7),
+	&.level-8 .note p:not(.lvl-8),
+	&.level-9 .note p:not(.lvl-9),
+	&.level-10 .note p:not(.lvl-10) {
 		color: rgba(255, 255, 255, 0.4);
 		display: none;
 	}
@@ -546,70 +550,128 @@
 	background: transparent;
 }
 
-.exhaustion-container.level-0 .exhaustion-icon i:nth-child(1) {
-	display: inline-block;
-}
-
 .exhaustion-container:not(.level-):not(.level-0) .exhaustion-icon {
 	color: var(--t5e-exhaustion-font);
 }
 
 .exhaustion-container:not(.level-):not(.level-0) .exhaustion-icon,
-.exhaustion-container.level-1 .exhaust-level li:nth-of-type(-n + 2),
-.exhaustion-container.level-2 .exhaust-level li:nth-of-type(-n + 3) {
+.exhaustion-container.level-1 .exhaust-level li:nth-of-type(-n+2) {
 	color: var(--t5e-exhaustion-font);
 	background: var(--t5e-exhaustion-lvl1);
 }
 
-.exhaustion-container.level-1 .exhaustion-icon i:nth-child(2) {
-	display: inline-block;
-}
-
-.exhaustion-container.level-2 .exhaustion-icon i:nth-child(3) {
-	display: inline-block;
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1) .exhaustion-icon,
+.exhaustion-container.level-2 .exhaust-level li:nth-of-type(-n+3) {
+	color: var(--t5e-exhaustion-font);
+	background: var(--t5e-exhaustion-lvl2);
 }
 
 .exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2) .exhaustion-icon,
-.exhaustion-container.level-3 .exhaust-level li:nth-of-type(-n + 4),
-.exhaustion-container.level-4 .exhaust-level li:nth-of-type(-n + 5) {
-	background: var(--t5e-exhaustion-lvl2);
-}
-
-.exhaustion-container.level-3 .exhaustion-icon i:nth-child(4) {
-	display: inline-block;
-}
-
-.exhaustion-container.level-4 .exhaustion-icon i:nth-child(5) {
-	display: inline-block;
-}
-
-.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4)
-	.exhaustion-icon,
-.exhaustion-container.level-5 .exhaust-level li:nth-of-type(-n + 6),
-.exhaustion-container.level-6 .exhaust-level li:nth-of-type(-n + 7) {
+.exhaustion-container.level-3 .exhaust-level li:nth-of-type(-n+4) {
 	background: var(--t5e-exhaustion-lvl3);
 }
 
-.exhaustion-container.level-5 .exhaustion-icon i:nth-child(6) {
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3) .exhaustion-icon,
+.exhaustion-container.level-4 .exhaust-level li:nth-of-type(-n+5) {
+	background: var(--t5e-exhaustion-lvl4);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4) .exhaustion-icon,
+.exhaustion-container.level-5 .exhaust-level li:nth-of-type(-n+6) {
+	background: var(--t5e-exhaustion-lvl5);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4):not(.level-5) .exhaustion-icon,
+.exhaustion-container.level-6 .exhaust-level li:nth-of-type(-n+7) {
+	background: var(--t5e-exhaustion-lvl6);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4):not(.level-5):not(.level-6) .exhaustion-icon,
+.exhaustion-container.level-7 .exhaust-level li:nth-of-type(-n+8) {
+	background: var(--t5e-exhaustion-lvl7);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4):not(.level-5):not(.level-6):not(.level-7) .exhaustion-icon,
+.exhaustion-container.level-8 .exhaust-level li:nth-of-type(-n+9) {
+	background: var(--t5e-exhaustion-lvl8);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4):not(.level-5):not(.level-6):not(.level-7):not(.level-8) .exhaustion-icon,
+.exhaustion-container.level-9 .exhaust-level li:nth-of-type(-n+10) {
+	background: var(--t5e-exhaustion-lvl9);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4):not(.level-5):not(.level-6):not(.level-7):not(.level-8):not(.level-9) .exhaustion-icon,
+.exhaustion-container.level-10 .exhaust-level li:nth-of-type(-n+11) {
+	background: var(--t5e-exhaustion-lvl10);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1) .level-display {
+	background: var(--exhaustion-lvl2);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2) .level-display{
+	background: var(--exhaustion-lvl3);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3) .level-display{
+	background: var(--t5e-exhaustion-lvl4);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4) .level-display{
+	background: var(--t5e-exhaustion-lvl5);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4):not(.level-5) .level-display{
+	background: var(--t5e-exhaustion-lvl6);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4):not(.level-5):not(.level-6) .level-display{
+	background: var(--t5e-exhaustion-lvl7);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4):not(.level-5):not(.level-6):not(.level-7) .level-display{
+	background: var(--t5e-exhaustion-lvl8);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4):not(.level-5):not(.level-6):not(.level-7):not(.level-8) .level-display{
+	background: var(--t5e-exhaustion-lvl9);
+}
+
+.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4):not(.level-5):not(.level-6):not(.level-7):not(.level-8):not(.level-9) .level-display{
+	background: var(--t5e-exhaustion-lvl10);
+}
+
+.exhaustion-container.level-0 .exhaustion-icon i:nth-child(1) {
 	display: inline-block;
 }
 
-.exhaustion-container.level-6 .exhaustion-icon i:nth-child(7) {
+.exhaustion-container.level-1 .exhaustion-icon i:nth-child(2),
+.exhaustion-container.level-2 .exhaustion-icon i:nth-child(2) {
 	display: inline-block;
 }
 
-.exhaustion-container:not(.level-):not(.level-0) .level-display {
-	color: var(--t5e-exhaustion-font);
-	background: var(--t5e-exhaustion-lvl1);
+.exhaustion-container.level-3 .exhaustion-icon i:nth-child(3),
+.exhaustion-container.level-4 .exhaustion-icon i:nth-child(3) {
+	display: inline-block;
 }
 
-.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2) .level-display {
-	background: var(--t5e-exhaustion-lvl2);
+.exhaustion-container.level-5 .exhaustion-icon i:nth-child(4),
+.exhaustion-container.level-6 .exhaustion-icon i:nth-child(4) {
+	display: inline-block;
 }
 
-.exhaustion-container:not(.level-):not(.level-0):not(.level-1):not(.level-2):not(.level-3):not(.level-4)
-	.level-display {
-	background: var(--t5e-exhaustion-lvl3);
+.exhaustion-container.level-7 .exhaustion-icon i:nth-child(5),
+.exhaustion-container.level-8 .exhaustion-icon i:nth-child(5) {
+	display: inline-block;
+}
+
+.exhaustion-container.level-9 .exhaustion-icon i:nth-child(6) {
+	display: inline-block;
+}
+
+.exhaustion-container.level-10 .exhaustion-icon i:nth-child(7) {
+	display: inline-block;
 }
 
 // Portrait Hit Points
