--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -416,6 +416,57 @@
 				<p class="notes">{{localize 'TIDY5E.Settings.ColorPickerAlwaysPreparedAccent.hint'}}</p>
 			</div>
 		</article>
+		<article class="setting">
+			<input
+				type="text"
+				class="color"
+				style="max-width: 120px"
+				data-dtype="string"
+				name="colorPickerSpellKnown"
+				id="colorPickerSpellKnown"
+				value="{{settings.colorPickerSpellKnown.value}}"
+				is="colorpicker-input"
+				data-responsive-color
+			/>
+			<div class="description" style="max-width: 240px">
+				<label for="colorPickerSpellKnown">{{localize 'TIDY5E.Settings.ColorPickerSpellKnown.name'}}</label>
+				<p class="notes">{{localize 'TIDY5E.Settings.ColorPickerSpellKnown.hint'}}</p>
+			</div>
+		</article>
+		<article class="setting">
+			<input
+				type="text"
+				class="color"
+				style="max-width: 120px"
+				data-dtype="string"
+				name="colorPickerSpellKnownOutline"
+				id="colorPickerSpellKnownOutline"
+				value="{{settings.colorPickerSpellKnownOutline.value}}"
+				is="colorpicker-input"
+				data-responsive-color
+			/>
+			<div class="description" style="max-width: 240px">
+				<label for="colorPickerSpellKnownOutline">{{localize 'TIDY5E.Settings.ColorPickerSpellKnownOutline.name'}}</label>
+				<p class="notes">{{localize 'TIDY5E.Settings.ColorPickerSpellKnownOutline.hint'}}</p>
+			</div>
+		</article>
+		<article class="setting">
+			<input
+				type="text"
+				class="color"
+				style="max-width: 120px"
+				data-dtype="string"
+				name="colorPickerSpellKnownAccent"
+				id="colorPickerSpellKnownAccent"
+				value="{{settings.colorPickerSpellKnownAccent.value}}"
+				is="colorpicker-input"
+				data-responsive-color
+			/>
+			<div class="description" style="max-width: 240px">
+				<label for="colorPickerSpellKnownAccent">{{localize 'TIDY5E.Settings.ColorPickerSpellKnownAccent.name'}}</label>
+				<p class="notes">{{localize 'TIDY5E.Settings.ColorPickerSpellKnownAccent.hint'}}</p>
+			</div>
+		</article>
 	</section>
 
 	{{!-- NPC/VEHICLE OPTIONS --}}
