--- a/src/templates/favorites/tidy5e-favorite-item.html
+++ b/src/templates/favorites/tidy5e-favorite-item.html
@@ -1,5 +1,5 @@
 <li
-	class="item fav-item {{#if item.isMagic}} magic-item{{/if}} {{#if item.system.equipped}} equipped{{/if}} {{#if item.system.preparation.prepared}} prepared{{/if}} {{#if item.alwaysPrep}} alwaysprepared{{/if}} {{ item.attunement.cls }}"
+	class="item fav-item {{#if item.isMagic}} magic-item{{/if}} {{#if item.system.equipped}} equipped{{/if}} {{#if item.system.preparation.prepared}} prepared{{/if}} {{#if item.alwaysPrep}} alwaysprepared{{/if}} {{#if item.spellknown}} spellknown{{/if}} {{ item.attunement.cls }}"
 	data-item-id="{{item._id}}"
 	{{#if item.canPrep}}title="{{item.toggleTitle}}"{{/if}}>
 	<div class="item-name rollable">
